# roomacoustics

./: .gitignore  README.md  home.html  index.html  industra.html  pyproject.toml  report_karty.html
.claude/: settings.local.json
Home/: README.md
Home/docs/: aktualni_stav_2026-05-16.md  doporuceni_2026-05-16.md  room_and_system.md
Home/measurements/RT60/: RT60_L sedacka_doma_loopback.txt  RT60_L uTV_doma_loopback May 16.txt  RT60_L+R sedacka_doma_loopback May 16.txt  RT60_L+R stred_obyvaku_doma_loopback May 16.txt  RT60_L+R uTV_doma_loopback May 16.txt  RT60_R sedacka_doma_loopback May 16.txt  RT60_R uTV_doma_loopback May 16.txt
Home/measurements/SPL Phase phase/: L sedacka_doma_loopback.txt  L uTV_doma_loopback May 16.txt  L+R sedacka_doma_loopback May 16.txt  L+R stred_obyvaku_doma_loopback May 16.txt  L+R uTV_doma_loopback May 16.txt  R sedacka_doma_loopback May 16.txt  R uTV_doma_loopback May 16.txt
Home/measurements/impulse responses/: L sedacka_doma_loopback.txt  L uTV_doma_loopback May 16.txt  L+R sedacka_doma_loopback May 16.txt  L+R stred_obyvaku_doma_loopback May 16.txt  L+R uTV_doma_loopback May 16.txt  R sedacka_doma_loopback May 16.txt  R uTV_doma_loopback May 16.txt
Industra/: README.md
Industra/docs/: aktualni_stav_2026-04-30.md  plan_mereni_a_cile_korekci.md  room_and_system.md  specs_summary.md  tuning_plan_edm.md
Industra/measurements/2026-04-30_jbl-mejdan/: LR_JBL_s_basem_industra_mejdan Apr 30.mdat
Industra/measurements/2026-04-30_jbl-mejdan/text_export/: distortion.txt  impulseresp_all.txt  (+3 more)
guides/: rew_naming_and_exports.md
